--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -120,6 +120,15 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+android:background="@drawable/shape3"
+    android:layout_marginRight="16dp"
+    android:layout_marginLeft="16dp"
+    android:padding="5dp"
+    android:elevation="4dp"
+    android:orientation="vertical">
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -139,7 +148,7 @@
                 android:backgroundTint="@color/orange"
                 android:text="know about fastag"
                 android:textColor="#fff" />
-
+</LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="180dp"
