--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,62 +17,54 @@
     <RelativeLayout
         android:id="@+id/header"
         android:layout_width="match_parent"
-        android:gravity="center"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:gravity="center">
 
 
+        <TextView
+            android:id="@+id/jrec"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginRight="8dp"
+            android:fontFamily="monospace"
+            android:text="JREC"
+            android:textAllCaps="true"
+            android:textColor="#fff"
+            android:textSize="75sp"
+            android:textStyle="bold"
 
-                <TextView
-                    android:id="@+id/jrec"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginRight="8dp"
-                    android:fontFamily="monospace"
-                    android:text="JREC"
-                    android:textAllCaps="true"
-                    android:textColor="#fff"
-                    android:textSize="75sp"
-                    android:textStyle="bold"
-
-                    />
-
+            />
 
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-android:layout_marginTop="16dp"
-                        android:layout_toRightOf="@+id/jrec"
-                        android:fontFamily="sans-serif-condensed"
-                        android:text="computer"
-                        android:textAllCaps="true"
-                        android:textColor="#fff"
-                        android:textSize="30sp"
-android:id="@+id/computer"
-                        android:textStyle="" />
+        <TextView
+            android:id="@+id/computer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="16dp"
+            android:layout_toRightOf="@+id/jrec"
+            android:fontFamily="sans-serif-condensed"
+            android:text="computer"
+            android:textAllCaps="true"
+            android:textColor="#fff"
+            android:textSize="30sp"
+            android:textStyle="" />
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginTop="-11dp"
-                        android:layout_below="@id/computer"
-                        android:layout_toRightOf="@+id/jrec"
-                        android:fontFamily="sans-serif-condensed"
-                        android:text="education"
-                        android:textAllCaps="true"
-                        android:textColor="#fff"
-                        android:textSize="30sp"
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/computer"
+            android:layout_gravity="center"
+            android:layout_marginTop="-11dp"
+            android:layout_toRightOf="@+id/jrec"
+            android:fontFamily="sans-serif-condensed"
+            android:text="education"
+            android:textAllCaps="true"
+            android:textColor="#fff"
+            android:textSize="30sp"
 
-                        android:textStyle="" />
-
-
-
-
-
-
+            android:textStyle="" />
 
 
     </RelativeLayout>
@@ -95,49 +87,50 @@ android:id="@+id/computer"
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="-8dp"
-                android:text="DIRECTOR RAjneesh singh rana "
+                android:layout_below="@id/jrec"
+                android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="16dp"
+                android:layout_marginTop="-8dp"
+                android:fontFamily="sans-serif-condensed"
+                android:text="DIRECTOR RAjneesh singh rana "
                 android:textAlignment="center"
                 android:textAllCaps="true"
-                android:fontFamily="sans-serif-condensed"
-                android:layout_below="@id/jrec"
                 android:textColor="#fff"
                 android:textSize="20sp"
-                android:layout_gravity="center_horizontal"
                 android:textStyle="italic"
                 android:visibility="visible" />
 
 
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-android:background="@drawable/shape3"
-    android:layout_marginRight="16dp"
-    android:layout_marginLeft="16dp"
-    android:padding="5dp"
-    android:elevation="4dp"
-    android:orientation="vertical">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="120dp"
-                android:layout_marginBottom="-16dp"
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
-                android:layout_marginTop="0dp"
-                android:src="@drawable/fast" />
+                android:background="@drawable/shape3"
+                android:elevation="4dp"
+                android:orientation="vertical"
+                android:padding="5dp">
 
-            <Button
-                android:id="@+id/fastag"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/jrec"
-                android:layout_gravity="center"
-                android:backgroundTint="@color/orange"
-                android:text="know about fastag"
-                android:textColor="#fff" />
-</LinearLayout>
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="120dp"
+                    android:layout_marginBottom="-16dp"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_marginTop="0dp"
+                    android:src="@drawable/fast" />
+
+                <Button
+                    android:id="@+id/fastag"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/jrec"
+                    android:layout_gravity="center"
+                    android:backgroundTint="@color/orange"
+                    android:text="know about fastag"
+                    android:textColor="#fff" />
+            </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="180dp"
