--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,7 +3,7 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/orange</item>
-        <item name="colorPrimaryDark">@color/darkorange</item>
+        <item name="colorPrimaryDark">#0Fa0DE</item>
         <item name="colorAccent">@color/colorAccent</item>
         <!-- specify enter and exit transitions -->
 
