--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ffffff"
-    tools:context="com.education.rajneesh.jrec.MainActivity">
+    tools:context="com.education.rajneesh.jrecapp.MainActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -91,7 +91,7 @@
                 android:layout_below="@id/jrec"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="16dp"
-                android:layout_marginTop="-8dp"
+                android:layout_marginTop="8dp"
                 android:fontFamily="sans-serif-condensed"
                 android:text="DIRECTOR RAjneesh singh rana "
                 android:textAlignment="center"
