--- a/app/src/main/res/layout-xlarge/activity_main.xml
+++ b/app/src/main/res/layout-xlarge/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ffffff"
-    tools:context="com.education.rajneesh.jrecapp.MainActivity">
+    tools:context="com.education.rajneesh.nishant.MainActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
