--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
-    tools:context="com.education.rajneesh.jrecapp.MainActivity">
+    tools:context="com.education.rajneesh.nishant.MainActivity">
 
 
     <LinearLayout
